# KDU-2026-AI

./: .env.example  .gitignore  .mcp.json  ANSWERS.md  DESIGN.md  DESIGN_DOC.md  DESIGN_DOCUMENT.md  Makefile  README.md  agents.md  app.py  design.md  phase1_layout_handwriting_test.ipynb  phase2_detail_toggle_model_downgrade.ipynb  phase3_vision_token_math.ipynb  problem-statement-answers.md  problem-statement.txt  pyproject.toml  rag_sesh1.py  rag_sesh2.py  requirements-dev.txt  requirements.txt  ruff.toml  run.sh
alembic/: env.py
app/: README.md  config.py  main.py
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py
config/: .env.example  agents.yaml  logging.conf  models.yml  prompts.yml  tasks.yaml
context-window-management/: ApiResponse.java  GlobalExceptionHandler.java  UserController.java  UserCreatedResponseDto.java  UserRequestDto.java  UserResponseDto.java  UserService.java  analysis.md  solution.md
docs/: API.md  DEPLOYMENT.md  README.md
exercise-1/: exercise1_transformers.ipynb
exercise-3/: .gitignore  DESIGN.md  README.md  TASKS.md  requirements.txt
frontend/: .env.example  README.md  app.py  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.js  requirements.txt  streamlit_app.py  tsconfig.json  vite.config.ts
iterative-refinement/: GlobalExceptionHandler.java  UserController.java  UserRequestDto.java  solution.md
notebooks/: phase2_compression.ipynb  phase4_architecture.ipynb
realtime-voice-agent-system/: .env.example  .gitignore  (+3 more)
(+550 files in other folders)
