[project]
name = "multi-function-ai-assistant"
version = "1.0.0"
description = "Production-style multi-function AI assistant with FastAPI and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

